# BookDataset-C-

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  DatasetReader.cpp  DatasetReader.h  a.out  data.csv  main.cpp
src/: Book.cpp  DatasetReader.cpp  main.cpp
src/includes/: DatasetReader.h
